--- a/starter-code/css/style.css
+++ b/starter-code/css/style.css
@@ -28,6 +28,7 @@ input {
     color: #fff;
     background-color: #5cb85c;
     border-color: #4cae4c;
+    margin-top: 50px;
 }
 
 .btn-delete {
@@ -39,3 +40,19 @@ input {
 .quantity {
   margin: 0 5px;
 }
+
+h1 {
+  text-align: center;
+}
+
+.flex-container {
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  padding: 0 1%;
+}
+
+.flex-container div {
+  margin: 0 1%;
+}
+
